--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://fastcdn.org/MooTools/1.5.2/MooTools-Core-compat-compressed.js"></script>
     <script src="{{ url_for('static', filename='vendor/vis.min.js') }}"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
+
+    <script src="{{ url_for('static', filename='js/graph.js') }}"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -11,159 +23,6 @@
 
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>-->
     <title>Congruence</title>
-
-    <script type="text/javascript">
-var nodes = null;
-var edges = null;
-var network = null;
-
-function draw() {
-// create people.
-// value corresponds with the age of the person
-nodes = [{color:'rgb(255, 204, 0)',id:'0',label:'CNN',value:'1'},{color:'rgb(255, 204, 0)',id:'1',label:'White House',value:'1'},{color:'rgb( 0, 51, 102)',id:'2',label:'Bolton',value:'1'},{color:'rgb( 0, 51, 102)',id:'3',label:'Donald Trump',value:'1'},{color:'rgb( 204, 204, 204)',id:'4',label:'president',value:'1'},{color:'rgb( 0, 51, 102)',id:'5',label:'Cohen',value:'1'},{color:'rgb( 204, 204, 204)',id:'6',label:'time',value:'1'},{color:'rgb( 0, 51, 102)',id:'7',label:'Mattis',value:'1'},{color:'rgb( 204, 204, 204)',id:'8',label:'administration',value:'1'},{color:'rgb( 204, 204, 204)',id:'9',label:'xi',value:'1'},{color:'rgb(255, 204, 0)',id:'10',label:'Mar-a-Lago',value:'1'},{color:'rgb( 0, 51, 102)',id:'11',label:'Trump',value:'1'},{color:'rgb( 204, 204, 204)',id:'12',label:'campaign',value:'1'},{color:'rgb(255, 204, 0)',id:'13',label:'Secret Service',value:'1'},{color:'rgb(255, 204, 0)',id:'14',label:'Novartis',value:'1'},{color:'rgb( 204, 204, 204)',id:'15',label:'club',value:'1'},{color:'rgb(255, 204, 0)',id:'16',label:'State Department',value:'1'},{color:'rgb( 0, 51, 102)',id:'17',label:'Donnelly',value:'1'}];
-
-
-// create connections between people
-// value corresponds with the amount of contact between two people
-edges = [{to:'0',title:'1',color:'rgb(100,100,100',from:'2'},
-{to:'10',title:'1',color:'rgb(100,100,100',from:'2'},
-{to:'7',title:'1',color:'rgb(100,100,100',from:'2'},
-{to:'11',title:'1',color:'rgb(100,100,100',from:'2'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'2'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'2'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'2'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'2'},
-{to:'10',title:'1',color:'rgb(100,100,100',from:'0'},
-{to:'14',title:'1',color:'rgb(100,100,100',from:'0'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'0'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'0'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'0'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'0'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'0'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'0'},
-{to:'0',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'3',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'10',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'14',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'11',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'5'},
-{to:'10',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'13',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'16',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'11',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'3'},
-{to:'10',title:'1',color:'rgb(100,100,100',from:'17'},
-{to:'13',title:'1',color:'rgb(100,100,100',from:'17'},
-{to:'11',title:'1',color:'rgb(100,100,100',from:'17'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'17'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'17'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'17'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'17'},
-{to:'14',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'13',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'16',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'10'},
-{to:'0',title:'1',color:'rgb(100,100,100',from:'7'},
-{to:'10',title:'1',color:'rgb(100,100,100',from:'7'},
-{to:'11',title:'1',color:'rgb(100,100,100',from:'7'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'7'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'7'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'7'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'7'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'14'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'14'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'14'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'14'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'14'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'14'},
-{to:'16',title:'1',color:'rgb(100,100,100',from:'13'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'13'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'13'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'13'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'13'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'13'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'13'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'16'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'16'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'16'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'16'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'16'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'16'},
-{to:'0',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'10',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'14',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'13',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'16',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'1',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'11'},
-{to:'8',title:'1',color:'rgb(100,100,100',from:'1'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'1'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'1'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'1'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'1'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'1'},
-{to:'12',title:'1',color:'rgb(100,100,100',from:'8'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'8'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'8'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'8'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'8'},
-{to:'15',title:'1',color:'rgb(100,100,100',from:'12'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'12'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'12'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'12'},
-{to:'4',title:'1',color:'rgb(100,100,100',from:'15'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'15'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'15'},
-{to:'6',title:'1',color:'rgb(100,100,100',from:'4'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'4'},
-{to:'9',title:'1',color:'rgb(100,100,100',from:'6'}];
-
-
-// Instantiate our network object.
-var container = document.getElementById('mynetwork');
-var data = {
-nodes: nodes,
-edges: edges
-};
-var options = {
-nodes: {
-shape: 'dot',
-scaling:{
-label: {
-min:8,
-max:20
-}
-}
-}
-};
-network = new vis.Network(container, data, options);
-}
-
-
-
-    </script>
 
 
 </head>
@@ -213,15 +72,6 @@ network = new vis.Network(container, data, options);
 
 <script src="{{ url_for('static', filename='js/coms.js') }}"></script>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
 
 </body>
 </html>
