taper un mot cle dans l'interface permet de générer le graphique, nettoyage

--- a/templates/main.html
+++ b/templates/main.html
@@ -49,16 +49,10 @@
                 <div data-dismiss="alert" class="alert alert-success" role="alert" id="db_status_box"></div>
                 <div data-dismiss="alert" class="alert alert-success" role="alert" id="opennlp_status_box"></div>
                 <input type="text" id="stream_field" name="keyword">
-                <form id="search_form" method="get" onsubmit="backend_call(); return false;">
+                <form id="search_form" method="get" onsubmit="get_graph_data(); return false;">
                     <input type="text" id="search_field" name="keyword">
-                    <button onclick="backend_call();" class="btn btn-primary">go</button>
+                    <button onclick="get_graph_data();" class="btn btn-primary">go</button>
                 </form>
-                <!--<ul>-->
-                <!--<li><img class="rounded" src="https://us.v-cdn.net/5021068/uploads/userpics/620/p3TNH1ATZKBG4.png">-->
-                <!--</li>-->
-                <!--<li><img class="rounded" src="https://78.media.tumblr.com/avatar_8e7842a29083_128.pnj"></li>-->
-                <!--<li><img class="rounded" src="https://78.media.tumblr.com/avatar_f53d371062e3_128.pnj"></li>-->
-                <!--</ul>-->
             </div>
         </div>
         <div class="row">
