interface propre pour une demo

--- a/templates/main.html
+++ b/templates/main.html
@@ -27,41 +27,33 @@
 
 </head>
 <body class="text-center">
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" id="content">
-    <header class="masthead mb-auto">
-        <div class="row">
-            <div class="col">
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                         aria-valuemax="100"></div>
+<!--<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" id="content">-->
+<div class="container-fluid" id="content">
+    <div class="row mt-3">
+        <div class="col-lg-9">
+            <div class="figure" id="receptor"></div>
+            <div id="mynetwork">
+                <div class="card" id="title_card">
+                    <div class="card-body">
+                        <h5 class="card-title">Congruence</h5>
+                        <p class="card-text">Outil de recherche de relations</p>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm">
 
             </div>
-            <div class="col-6">
-                <div class="figure" id="receptor"></div>
-                <div id="mynetwork"></div>
-            </div>
-            <div class="col-sm">
-                <div data-dismiss="alert" class="alert alert-success" role="alert" id="db_status_box"></div>
-                <div data-dismiss="alert" class="alert alert-success" role="alert" id="opennlp_status_box"></div>
-                <input type="text" id="stream_field" name="keyword">
-                <form id="search_form" method="get" onsubmit="get_graph_data(); return false;">
-                    <input type="text" id="search_field" name="keyword">
-                    <button onclick="get_graph_data();" class="btn btn-primary">go</button>
-                </form>
-            </div>
         </div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col">
+        <div class="col-lg-3">
+            <div data-dismiss="alert" class="alert alert-success" role="alert" id="db_status_box"></div>
+            <div data-dismiss="alert" class="alert alert-info" role="alert" id="opennlp_status_box">OpenNLP
+                unresponsive
             </div>
-            <div class="col"></div>
+            <!--<input type="text" id="stream_field" name="keyword">-->
+            <form id="search_form" method="get" onsubmit="get_graph_data(); return false;">
+                <input type="text" id="search_field" name="keyword">
+                <input type="submit" class="btn btn-primary">
+            </form>
         </div>
-    </header>
+    </div>
 </div>
 
 <script src="{{ url_for('static', filename='js/coms.js') }}"></script>
