--- a/templates/main.html
+++ b/templates/main.html
@@ -36,7 +36,7 @@
                 <div class="card" id="title_card">
                     <div class="card-body">
                         <h5 class="card-title">Congruence</h5>
-                        <p class="card-text">Outil de recherche de relations</p>
+                        <p class="card-text">Découverte de contexte</p>
                     </div>
                 </div>
 
