graphe reconstitué depuis la bdd, appels en boucle. TODO: les arreter quand ils ne varient plus, vider la bdd avant de lancer une recherche

--- a/templates/main.html
+++ b/templates/main.html
@@ -48,7 +48,7 @@
                 unresponsive
             </div>
             <!--<input type="text" id="stream_field" name="keyword">-->
-            <form id="search_form" method="get" onsubmit="get_graph_data(); return false;">
+            <form id="search_form" method="get" onsubmit="launch(); return false;">
                 <input type="text" id="search_field" name="keyword">
                 <input type="submit" class="btn btn-primary">
             </form>
