--- a/templates/main.html
+++ b/templates/main.html
@@ -30,7 +30,7 @@
 <!--<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" id="content">-->
 <div class="container-fluid" id="content">
     <div class="row mt-3">
-        <div class="col-lg-9">
+        <div class="col-lg-10">
             <div class="figure" id="receptor"></div>
             <div id="mynetwork">
                 <div class="card" id="title_card">
@@ -42,7 +42,11 @@
 
             </div>
         </div>
-        <div class="col-lg-3">
+	<!-- <div class="col-lg-5"> -->
+	<!--   <div id="config"> -->
+	<!--   </div> -->
+	<!-- </div> -->
+        <div class="col-lg-2">
             <div data-dismiss="alert" class="alert alert-success" role="alert" id="db_status_box"></div>
             <div data-dismiss="alert" class="alert alert-info" role="alert" id="opennlp_status_box">OpenNLP
                 unresponsive
