new mootools CDN

--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://fastcdn.org/MooTools/1.5.2/MooTools-Core-compat-compressed.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mootools/1.6.0/mootools-core.js"></script>
     <script src="{{ url_for('static', filename='vendor/vis.min.js') }}"></script>
 
     <!--librairies pour boostrap-->
