--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/vis.min.css') }}">
-    
+
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>-->
     <title>Congruence</title>
 
@@ -42,16 +42,16 @@
 
             </div>
         </div>
-	<!-- <div class="col-lg-5"> -->
-	<!--   <div id="config"> -->
-	<!--   </div> -->
-	<!-- </div> -->
+        <!-- <div class="col-lg-5"> -->
+        <!--   <div id="config"> -->
+        <!--   </div> -->
+        <!-- </div> -->
         <div class="col-lg-3">
             <div data-dismiss="alert" class="alert alert-success" role="alert" id="db_status_box"></div>
             <div data-dismiss="alert" class="alert alert-info" role="alert" id="opennlp_status_box">OpenNLP
                 unresponsive
             </div>
-            <!--<input type="text" id="stream_field" name="keyword">-->
+            <div data-dismiss="alert" class="alert alert-info" role="alert" id="storm_status_box">Storm unresponsive</div>
             <form id="search_form" method="get" onsubmit="launch(); return false;">
                 <input type="text" id="search_field" name="keyword">
                 <input type="submit" class="btn btn-primary">
